SF Primes/src/objects/Metrics__c.object
<CustomObject>
    <description>This object captures rankings and third party metric information for the Reputation Management and Social Media user groups. The object is intended to be associated with the Account Plan.</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Metrics</relationshipLabel>
        <relationshipName>Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Metrics</relationshipLabel>
        <relationshipName>Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPC__c</fullName>
        <label>CPC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cars_com_Rating__c</fullName>
        <inlineHelpText>Enter the rating on Cars.com for the day you are entering the record.</inlineHelpText>
        <label>Cars.com Rating</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cars_com_Reviews__c</fullName>
        <inlineHelpText>This is a cumulative review count, not just a current month count.</inlineHelpText>
        <label>Cars.com Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clicks__c</fullName>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connections__c</fullName>
        <label>Connections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>Today&apos;s Date.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealerRater_Rating__c</fullName>
        <inlineHelpText>Enter the rating on DealerRater for the day you are entering the record.</inlineHelpText>
        <label>DealerRater Rating</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealerRater_Reviews__c</fullName>
        <inlineHelpText>This is a cumulative review count, not just a current month count.</inlineHelpText>
        <label>DealerRater Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Messages__c</fullName>
        <label>Direct Messages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edmunds_com_Rating__c</fullName>
        <inlineHelpText>Enter the rating on Edmunds.com for the day you are entering the record.</inlineHelpText>
        <label>Edmunds.com Rating</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edmunds_com_Reviews__c</fullName>
        <inlineHelpText>This is a cumulative review count, not just a current month count.</inlineHelpText>
        <label>Edmunds.com Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facebook_Twitter_Highlights__c</fullName>
        <label>Facebook &amp; Twitter Highlights</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Followers_Google__c</fullName>
        <label>Followers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Followers__c</fullName>
        <label>Followers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Reviews__c</fullName>
        <inlineHelpText>This is a cumulative review count, not just a current month count.</inlineHelpText>
        <label>Google Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google__c</fullName>
        <inlineHelpText>Enter the rating on Google for the day you are entering the record.</inlineHelpText>
        <label>Google Rating</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_Total_Likes__c</fullName>
        <label>Lifetime Total Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likes__c</fullName>
        <label>Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mentions__c</fullName>
        <label>@Mentions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organic_Reach__c</fullName>
        <label>Organic Reach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Listings__c</fullName>
        <label>Other Listings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Page_Engaged_Users__c</fullName>
        <label>Page Engaged Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Impressions__c</fullName>
        <label>Paid Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plus_Ones__c</fullName>
        <label>Plus Ones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posts_Facebook__c</fullName>
        <label>Posts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posts_Google__c</fullName>
        <label>Posts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posts__c</fullName>
        <label>Posts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Re_Tweets__c</fullName>
        <label>Re-Tweets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shares__c</fullName>
        <label>Shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Stats_Completion__c</fullName>
        <formula>IF( $RecordType.Name = &apos;SMS Metrics&apos;, (
(
IF(ISBLANK( Lifetime_Total_Likes__c ),0,1)+
IF(ISBLANK( Page_Engaged_Users__c ),0,1)+
IF(ISBLANK( Total_Impressions__c ),0,1)+
IF(ISBLANK( Organic_Reach__c ),0,1)+
IF(ISBLANK(Shares__c),0,1)+
IF(ISBLANK(Likes__c),0,1)+
IF(ISBLANK( Wall_Posts_Comments__c ),0,1)+
IF(ISBLANK( Paid_Impressions__c ),0,1)+
IF(ISBLANK(Clicks__c),0,1)+
IF(ISBLANK(Connections__c),0,1)+
IF(ISBLANK(CPC__c),0,1)+
IF(ISBLANK(Followers__c),0,1)+
IF(ISBLANK(Tweets__c),0,1)+
IF(ISBLANK(Your_Tweets__c),0,1)+
IF(ISBLANK( Mentions__c ),0,1)+
IF(ISBLANK( Direct_Messages__c ),0,1)
) 
/ 16), Null)</formula>
        <inlineHelpText>This will determine the number of fields that have been filled out in the Facebook and Twitter Statistics sections. If a stat is 0, enter 0 and it will count as filled out.</inlineHelpText>
        <label>Social Stats Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Impressions__c</fullName>
        <label>Total Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tweets__c</fullName>
        <label>Tweets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Views__c</fullName>
        <label>Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wall_Posts_Comments__c</fullName>
        <label>Wall Posts &amp; Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebID</label>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>Metrics</relationshipLabel>
        <relationshipName>Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Yahoo_Reviews__c</fullName>
        <inlineHelpText>This is a cumulative review count, not just a current month count.</inlineHelpText>
        <label>Yahoo Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yahoo__c</fullName>
        <inlineHelpText>Enter the rating on Yahoo for the day you are entering the record.</inlineHelpText>
        <label>Yahoo Rating</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yelp_Not_Recommended__c</fullName>
        <inlineHelpText>The cumulative number of Not Recommended reviews at the time of entry.</inlineHelpText>
        <label>Yelp Not Recommended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yelp_Reviews__c</fullName>
        <inlineHelpText>This is a cumulative review count, not just a current month count.</inlineHelpText>
        <label>Yelp Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yelp__c</fullName>
        <inlineHelpText>Enter the rating on Yelp for the day you are entering the record.</inlineHelpText>
        <label>Yelp Rating</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Your_Tweets__c</fullName>
        <label>Your Tweets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Metrics</label>
    <nameField>
        <displayFormat>M-{0000000}</displayFormat>
        <label>Metrics ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <recordTypes>
        <fullName>RMS_Metrics</fullName>
        <active>true</active>
        <label>RMS Metrics</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMS_Metrics</fullName>
        <active>true</active>
        <label>SMS Metrics</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>